--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <p>select from the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
@@ -32,7 +32,9 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="bar">
+          <div id="plot">
+        </div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
